2016-02-17 Loic Valery <lvalery@cern.ch>
        * Fix crash when computing significance and using validation regions

2016-02-15 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Added option to specify NuisanceParameter for each systematic -> allow correlated systematics
        * Added option SkipSmoothing for Regions
        * Added option to multiply and/or divide a sample by another sample (useful for corrections on the flight)
        * Added option UseSystematics for Samples: by default is FALSE for ghost samples, true for other non-data samples
        * Added HistoPath option for Sample, following Ian's suggestion (still to check and to add stuff for systematics!)

2016-01-22 Thomas Calvet <calvet@cppm.in2p3.fr>
	* Adding new ploting functionnality
	* Remove overflow and underflow usage in Auto-bin function
	
2016-01-05 Loic Valery <lvalery@cern.ch>
	* Fix inconsistency for integral to only take into account the range allowed by the user
          (TTHFITTER-37)

2016-01-30 Loic Valery <lvalery@cern.ch>
     	* Fix bug in ranking plot in TtHFit.C

2016-01-27 John Keller <jkeller@cern.ch>
	* Adding New AutoBin algorithm "Transform J"
	* Modify Auto-binning to be compatible with HIST input
       
2016-01-26 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Option added to swithc OFF MC for given sample
        * Fix to HistoTools for one-sided systematics with symmatrisation & smoothing
        
2016-01-22 Thomas Calvet <calvet@cppm.in2p3.fr>
	* Adding possibility to profile several/all systematics (coma separated list/all)
	* Adding protection to the likelihood scan in case the systematic has been removed in the pruning step
	
2016-01-20 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Adding experimental option to remove constrain for some systematics -> use IsFreeParameter: TRUE (working only for fit, crashing for limits...)
        * Implementing new options for histogram inputs: Region -> HistoPathSuff(s)
        